sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: ';' expected but 'while' found.
 			}while(sw==false)
                         ^AlgBubbleSort1:18: error: 'while' expected but '}' found.
}
^